[project]
name = "nueralink"
version = "0.1.0"
description = ""
authors = [
    {name = "Achyuth",email = "achyuthrayal2@gmail.com"}
]
requires-python = ">=3.11,<3.15"
package-mode = false
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "newspaper3k (>=0.2.8,<0.3.0)",
    "pymongo[srv] (>=4.16.0,<5.0.0)",
    "cloudscraper (>=1.2.71,<2.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "youtube-transcript-api (>=1.2.4,<2.0.0)",
    "yt-dlp (>=2026.2.4,<2027.0.0)",
    "webvtt-py (>=0.5.1,<0.6.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "pypdf (>=6.7.0,<7.0.0)",
    "sentence-transformers (>=5.2.2,<6.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "fastapi (>=0.128.8,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sse-starlette (>=3.2.0,<4.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "langgraph (>=1.0.8,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "tenacity (>=9.1.4,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
